# firefly-iii-fints

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
