[tool.poetry]
name = "firefly-iii-fints"
version = "0.1.0"
description = ""
authors = ["Julian B. <jeriox@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.1"
Firefly-III-API-Client = "^2.0.12.0"
fints = "^4.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
